perf: added ./idea on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -466,3 +466,13 @@ $RECYCLE.BIN/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+
+.idea/.idea.BRW.API/.idea/dataSources.local.xml
+
+.idea/.idea.BRW.API/.idea/projectSettingsUpdater.xml
+
+.idea/.idea.BRW.API/.idea/workspace.xml
+
+.idea/.idea.BRW.API/.idea/dataSources/5ced0ae2-7b50-45d1-9273-769f390bdab0.xml
+
+.idea/.idea.BRW.API/.idea/dataSources/9540d79b-68d7-4660-aa3a-26773bea9523.xml
