perf: .idea on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -476,3 +476,5 @@ $RECYCLE.BIN/
 .idea/.idea.BRW.API/.idea/dataSources/5ced0ae2-7b50-45d1-9273-769f390bdab0.xml
 
 .idea/.idea.BRW.API/.idea/dataSources/9540d79b-68d7-4660-aa3a-26773bea9523.xml
+
+.idea/.idea.BRW.API/.idea/
