BREAKING CHANGE: changed project arch to DDD
the project was initial in MVC arch, but in was found out that Data Driven Domain does everything that we need and is scalable to future feature, like microsservices in ``golang`` and ``php``

--- a/.gitignore
+++ b/.gitignore
@@ -478,3 +478,5 @@ $RECYCLE.BIN/
 .idea/.idea.BRW.API/.idea/dataSources/9540d79b-68d7-4660-aa3a-26773bea9523.xml
 
 .idea/.idea.BRW.API/.idea/
+
+.idea/
