--- a/BRW.WebApi/Properties/launchSettings.json
+++ b/BRW.WebApi/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:19748",
-      "sslPort": 44332
+      "applicationUrl": "http://localhost:40211",
+      "sslPort": 44336
     }
   },
   "profiles": {
-    "BRW.API": {
+    "BRW.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7023;http://localhost:5266",
+      "applicationUrl": "https://localhost:7099;http://localhost:5249",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
