--- a/BRW.WebApi/appsettings.json
+++ b/BRW.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "postgresConnectionString": "user id=postgres;Password=1e4794496a58be1f176346173efae5421420aef3;Host=localhost;Port=5432;Database=BrwDB;Pooling=true;Connection Lifetime=0;"
+  },
   "AllowedHosts": "*"
 }
