--- a/BRW.Infrastructure/BRW.Infrastructure.csproj
+++ b/BRW.Infrastructure/BRW.Infrastructure.csproj
@@ -15,6 +15,11 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BRW.Domain\BRW.Domain.csproj" />
     </ItemGroup>
 
 </Project>
